# zero2prod

./: Cargo.toml  Dockerfile  config.yaml  docker-compose.yml
.github/workflows/: general.yml
config/: base.yaml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  subscriptions.rs
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
